--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        
+ 
+    - name: Tests
+      run: |
+        python -m unittest discover -s tests
+       
     - name: Deploy to Render
       run: |
         curl -X POST "https://api.render.com/deploy/srv-csokpk23esus73c86ak0?key=y0VIprRmUIk" \
