--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,4 @@
- # This is a basic workflow to help you get started with Actions
-
-name: VQ
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: "Paso 1"
-        run: echo "Hola mundo"
-[6:39 p.m., 13/11/2024] +57 315 5545826: # This is a basic workflow to help you get started with Actions
+# This is a basic workflow to help you get started with Actions
 
 name: Mi primera action
 
@@ -30,7 +6,7 @@ name: Mi primera action
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -45,21 +21,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: "Paso 1"
-        run: | 
-          echo "Hola mundo  "
+        run: |
+          echo "Hola mundo"
           hostname
           pwd
           ls -l
           find .
-[6:44 p.m., 13/11/2024] +57 315 5545826: # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+      - name: Clonando el repositorio
+        uses: actions/checkout@v4
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
       - name: "Paso 1"
         run: |
           echo "Hola mundo"
@@ -67,16 +37,3 @@ jobs:
           pwd
           ls -l
           find .
-
-    steps:
-    - name: Clonando el repositorio
-      uses: actions/checkout@v4
-
-    steps:
-      - name: "Paso 1"
-        run: |
-          echo "Hola mundo"
-          hostname
-          pwd
-          ls -l
-          find . 
